tests/errors/array_03.f90
program array_03
implicit none

integer :: a(10)
a(:,:) = 1

end program
